# Haskell-CloudEvents-Echo

./: CloudEventsEcho.cabal  Dockerfile  Haskell-CloudEvents-Echo.cabal  README.md
http/: Dockerfile  cloudevent_to_broker.txt
src/: Emitter.hs  Main.hs  Service.hs  test.sh
